2007-08-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Added default_room_options option
	(thanks to Etan Reisner and Badlop)
	* src/mod_muc/mod_muc_room.erl: Likewise
	* doc/guide.tex: Updated

2007-08-01  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Front page table formatting that render correctly
	in HTML and update mentionning CEAN as a way to install
	ejabberd (Thanks to Badlop) (EJAB-272).

	* src/ejabberd_s2s_out.erl: Avoid bouncing messages twice if
	terminate happens during open_socket.

	* src/ejabberd_s2s_out.erl: On terminate, bounce internal process
	queue and Erlang message queue.

	* src/mod_private.erl: Reduce memory consumption on user private
	storage removal (EJAB-299).

2007-07-31  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Making use of CDATA escaping optional through with
	a compile time option (EJAB-298).
	* src/Makefile.in: Likewise.
	* src/configure.ac: Likewise.

2007-07-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_version.erl: Added option to hide OS version (thanks to
	Badlop)
	* doc/guide.tex: Updated

	* src/msgs/zh.msg: Updated (thanks to Shelley Shyan)

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/msgs/gl.msg: New galician translation (thanks to
	Carlos E. Lopez)

	* src/ejabberd_config.erl: Added possibility for appending values
	to config options (thanks to Badlop)
	* doc/guide.tex: Updated

2007-07-30  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Better escaping management with CDATA. We only add
	CDATA enclosure when needed. CDATA end token is properly escaped.

	* src/xml.erl: Only wrap xmldata nodes in xml cdata "tag" if
	bigger than 50 bytes. Shorter xmlcdata nodes will be escaped.
	
	* src/tls/tls_drv.c: Sends the entire certificate chain (EJAB-209).

	* src/acl.erl: Remove compilation warnings (EJAB-290).

	* src/xml_stream.erl: Group CDATA on a single xmlcdata