@@ -1,3 +1,12 @@
+2007-08-03  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/mod_announce.erl: Added support to all the announce features
+	described in documentation. Access to all announce features
+	through command line, adhoc commands and disco (Thanks to
+	Badlop) (EJAB-18).
+	* src/gen_mod.erl: Likewise.
+	* doc/guide.tex: Likewise.
+
 2007-08-02  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_muc/mod_muc.erl: Added default_room_options option
